--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
 * {
     /* border: 1px solid red; */
 }
+
+a:link {
+    text-decoration: none;
+}
+
+.a-section {
+   width: 350px;
+   margin: 0 auto;
+}
+
+form {
+    border-style: solid;
+    border-width: thin;
+    padding-left: 10px;
+    padding-top: 5px;
+    border-color: grey;
+    color: rgb(17,17,17);
+    font-size: 13px;
+    align-items: top;
+}
+
+#emailorphone  {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+input {
+    width: 320px;
+}
+
+#continue {
+    width: 325px;
+    background-color: orange;
+    margin-top: 20px;
+}
+
+#password  {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+#pw {
+    margin-left: 40px;
+    margin-right: 110px;
+
+}
+
+#forgotpassword {
+    margin-left: 30px;
+}
+
+#createyouramazonaccount {
+    width: 350px;
+}
+
+h4 {
+    padding-left: 20px;
+}
+
+footer {
+    width: 350px;
+    margin: 0 auto;
+}
+
+#conditions, #privacy {
+    margin-right: 45px;
+}
